# Demes

./: README.rst  fit_vmap_version.ipynb  pyproject.toml
docs/: conf.py  index.md  index.rst
