[project]
name = "demes"
version = "0.1.0"
description = "Inference for demes-formatted demographic models"
readme = "README.rst"
authors = [
    { name = "Jonathan Terhorst", email = "terhorst@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "numpy<2.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
